# yolo_marine

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
config/: albumentations.yaml  albumentations_medium.yaml  albumentations_strong.yaml  albumentations_weak.yaml
src/: prepare_dataset.py
