[tool.poetry]
name = "yolo_marine"
version = "0.1.0"
description = "YOLO detection for marine organisms"
authors = ["slermo"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# ML
torch = "*"
torchvision = "*"
ultralytics = "^8.1.0"

# Utils
opencv-python = "^4.9.0"
numpy = "^1.26"
pandas = "^2.0"
matplotlib = "^3.8"
tqdm = "^4.66"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18"
jupyter = "^1.0"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
